--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "data-matching": "^1.23.0",
     "mrcp": "^1.1.0",
     "nact": "^7.2.2",
+    "node-gtk": "^0.3.0",
     "sip": "0.0.6"
   },
   "devDependencies": {
