Preserving work so far

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mrcp": "^1.1.1",
     "nact": "^7.2.2",
     "node-gtk": "^0.3.0",
-    "sip": "0.0.6"
+    "sip": "0.0.6",
+    "wav": "^1.0.2"
   },
   "devDependencies": {
     "jest": "^25.1.0"
