--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "config": "^3.3.1",
     "data-matching": "^1.23.2",
     "minimist": "^1.2.5",
+    "moment": "^2.24.0",
     "mrcp": "^1.3.1",
     "nact": "^7.2.2",
     "sip": "0.0.6",
