--- a/config/default.js.sample
+++ b/config/default.js.sample
@@ -1,5 +1,5 @@
 module.exports = {
-	local_ip_address: '127.0.0.1',
+	local_ip: '192.168.1.1',
 	sip_port: 8060,
 	mrcp_port: 8888,
 	rtp_lo_port: 10000,
