--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mrcp": "^1.3.1",
     "nact": "^7.2.2",
     "sip": "0.0.6",
+    "tone-stream": "^1.2.0",
     "wav": "^1.0.2"
   },
   "devDependencies": {
