--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "collections": "^5.1.10",
     "config": "^3.3.1",
     "data-matching": "^1.23.2",
+    "dtmf-detection-stream": "^1.2.0",
     "lodash": "^4.17.19",
     "minimist": "^1.2.5",
     "moment": "^2.24.0",
     "mrcp": "^1.3.1",
     "nact": "^7.2.2",
     "sip": "0.0.6",
-    "tone-stream": "^1.2.0",
+    "tone-stream": "^1.3.0",
     "wav": "^1.0.2"
   },
   "devDependencies": {
