Corrected dtmf_sr_agent.js timeout

--- a/config/default.js.sample
+++ b/config/default.js.sample
@@ -1,8 +1,8 @@
 module.exports = {
-	local_ip: '192.168.1.1',
+	local_ip: '127.0.0.1`,
 	sip_port: 8070,
 	mrcp_port: 8888,
 	rtp_lo_port: 10000,
 	rtp_hi_port: 20000,
-	rtp_timeout: 30000,
+	rtp_timeout: 5000,
 }
