--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mrcp_server",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "A simple Media Resource Control Protocol (MRCPv2) server",
   "main": "index.js",
   "scripts": {
@@ -17,6 +17,7 @@
     "data-matching": "^1.23.2",
     "dtmf-detection-stream": "^1.2.0",
     "lodash": "^4.17.19",
+    "magic-globals": "^0.9.1",
     "minimist": "^1.2.5",
     "moment": "^2.24.0",
     "mrcp": "^1.3.4",
