--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "minimist": "^1.2.5",
     "moment": "^2.24.0",
     "mrcp": "^1.3.4",
+    "mrcp-utils": "^1.0.0",
     "nact": "^7.2.2",
     "sip": "0.0.6",
     "tone-stream": "^1.3.1",
