--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "nact": "^7.2.2",
     "sip": "0.0.6",
     "tone-stream": "^1.3.1",
-    "wav": "^1.0.2"
+    "wav": "^1.0.2",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "jest": "^26.6.3"
