--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "mrcp_server",
-  "version": "1.3.1",
+  "version": "1.4.0",
   "description": "A simple Media Resource Control Protocol (MRCPv2) server",
   "main": "index.js",
   "scripts": {
     "test": "./node_modules/jest/bin/jest.js tests/unit"
   },
-  "engines": {"node": "v12.19.0"},
+  "engines": {
+    "node": "v12.19.0"
+  },
   "author": "MayamaTakeshi",
   "repository": "https://MayamaTakeshi@github.com/MayamaTakeshi/mrcp_server",
   "license": "ISC",
@@ -23,7 +25,7 @@
     "morse-decoding-stream": "^1.1.4",
     "morse-node": "^0.1.1",
     "mrcp": "^1.3.4",
-    "mrcp-utils": "^1.0.1",
+    "mrcp-utils": "^1.1.0",
     "nact": "^7.2.2",
     "sip": "0.0.6",
     "tone-stream": "^1.4.0",
