--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "mrcp-utils": "^1.1.1",
     "nact": "^7.2.2",
     "node-vad": "^1.1.4",
-    "sip": "git+https://github.com/MayamaTakeshi/sip.js.git#30f1d19ccbf8e83cdac03092cc1f6f60d2ef886a",
+    "sip": "github:kirm/sip.js#6d3ebf9062e741e1e5430c93960fdff644dcb30a",
     "tone-stream": "^1.4.0",
     "wav": "^1.0.2",
     "xml-js": "^1.6.11"
