--- a/config/default.js.sample
+++ b/config/default.js.sample
@@ -1,8 +1,11 @@
 module.exports = {
-	local_ip: '127.0.0.1',
-	sip_port: 8070,
-	mrcp_port: 8888,
-	rtp_lo_port: 10000, // Lowest UDP Port Number for RTP
-	rtp_hi_port: 10400, // Highest UDP Port Number for RTP
-	rtp_timeout: 5000,  // Timeout for RTP packets to be exchanged. If there is no activity for more than this, the SIP call will be terminated
+    local_ip: '127.0.0.1',
+    sip_port: 8070,
+    mrcp_port: 8888,
+    rtp_lo_port: 10000, // Lowest UDP Port Number for RTP
+    rtp_hi_port: 10400, // Highest UDP Port Number for RTP
+    rtp_timeout: 5000,  // Timeout for RTP packets to be exchanged. If there is no activity for more than this, the SIP call will be terminated
+
+    julius_server_ip: '192.168.225.131',
+    julius_server_port: 10500,
 }
