--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "mrcp-utils": "^1.1.2",
     "nact": "^7.2.2",
     "node-vad": "^1.1.4",
+    "request-promise": "^4.2.6",
     "sip": "github:kirm/sip.js",
     "speech-recog-stream": "^1.0.7",
     "tone-stream": "^1.4.0",
     "wav": "^1.0.2",
+    "ws": "^7.4.6",
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
