--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "mrcp-utils": "^1.1.2",
     "nact": "^7.2.2",
     "node-vad": "^1.1.4",
+    "request": "^2.88.2",
     "request-promise": "^4.2.6",
-    "sip": "github:kirm/sip.js",
+    "sip": "git+https://git@github.com/kirm/sip.js.git#6d3ebf9062e741e1e5430c93960fdff644dcb30a",
     "speech-recog-stream": "^1.0.7",
     "tone-stream": "^1.4.0",
     "wav": "^1.0.2",
