--- a/sr_engine_comparison/package.json
+++ b/sr_engine_comparison/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "pcm-convert": "^1.6.5",
     "socket.io": "^4.2.0",
     "tartjs": "^0.0.0"
   }
