--- a/config/default.js.sample
+++ b/config/default.js.sample
@@ -22,4 +22,10 @@ module.exports = {
         organization_id: 'YOUR_ORGANIZATION_ID',
         api_key: 'YOUR_API_KEY',
     },
+
+    vosk: {
+        'ja-JP': {
+            server: 'ws://127.0.0.1:2700',
+        },
+    },
 }
