--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "mrcp": "^1.3.6",
     "mrcp-utils": "^1.3.0",
     "nact": "^7.2.2",
-    "node-vad": "^1.1.4",
+    "node-vad": "github:snirpo/node-vad",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "sip": "git+https://git@github.com/kirm/sip.js.git#6d3ebf9062e741e1e5430c93960fdff644dcb30a",
